# py-cashify

./: .gitignore  README.md  pyproject.toml  setup.py
py_cashify/: __main__.py  api.py  cron_check.py  qris_maker.py
py_cashify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
